# nord_pointcloud

./: CMakeLists.txt  package.xml
data/: calibration.txt  confusion_3nn_voxelized.txt  examineConfusion.py  redcube0.pcd  redcube1.pcd  redcube2.pcd  redcylinder0.pcd  redcylinder1.pcd  redcylinder2.pcd  samples.tz  small_maze.txt
src/: calibration.cpp  cleverwallremoval.cpp  debrisdetection.cpp  evenmorecleverwallremoval.cpp  evenmorecleverwallremoval2.cpp  flann.cpp  gatherdata.cpp  objectdetection.cpp  process.cpp  testClassification.cpp
